feat: add filter to exclude permissive
